# jack-nerd-mixer

./: .gitignore  Cargo.toml  README.md
src/: args.rs  errors.rs  main.rs  strip.rs
src/dbus_worker/: mod.rs
src/jack_internal/: mod.rs
