[package]
name = "jack-nerd-mixer"
version = "0.1.0"
authors = ["shiro <shiro@usagi.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = { git = "https://github.com/RustAudio/rust-jack.git" }
dbus = "0.8.2"
clap = { git = "https://github.com/clap-rs/clap/" }
failure = "0.1.7"
enclose = "1.1.8"

